@@ -41,7 +41,7 @@ var DBInfo: IDBInformation;
 begin
     DBInfo := Attachment.GetDBInformation([isc_info_db_id,isc_info_allocation,isc_info_base_level,
                               isc_info_implementation,isc_info_no_reserve,isc_info_ods_minor_version,
-                              isc_info_ods_version,isc_info_page_size,isc_info_version]);
+                              isc_info_ods_version,isc_info_page_size,isc_info_version,isc_info_db_read_only]);
     WriteDBInfo(DBInfo);
 
     DBInfo := Attachment.GetDBInformation([isc_info_current_memory, isc_info_forced_writes,
