@@ -15,10 +15,11 @@
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="172"/>
-        <CursorPos X="26" Y="195"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="495"/>
+        <CursorPos X="50" Y="502"/>
         <UsageCount Value="105"/>
+        <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
@@ -84,10 +85,11 @@
       <Unit10>
         <Filename Value="Test9.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="25"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="41"/>
+        <CursorPos X="109" Y="44"/>
         <UsageCount Value="105"/>
+        <Loaded Value="True"/>
       </Unit10>
       <Unit11>
         <Filename Value="Test10.pas"/>
@@ -101,11 +103,11 @@
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="70"/>
-        <CursorPos X="19" Y="81"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="90"/>
+        <CursorPos X="8" Y="61"/>
         <UsageCount Value="105"/>
+        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
@@ -202,8 +204,8 @@
       <Unit22>
         <Filename Value="../client/FBAttachment.pas"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="444"/>
-        <CursorPos X="3" Y="583"/>
+        <TopLine Value="543"/>
+        <CursorPos X="12" Y="559"/>
         <UsageCount Value="18"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -336,7 +338,7 @@
       </Unit40>
       <Unit41>
         <Filename Value="../client/FBMessages.pas"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="587"/>
         <CursorPos X="24" Y="610"/>
         <UsageCount Value="13"/>
@@ -424,8 +426,9 @@
       <Unit53>
         <Filename Value="../changelog"/>
         <IsVisibleTab Value="True"/>
-        <EditorIndex Value="3"/>
-        <CursorPos X="80" Y="22"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="4"/>
+        <CursorPos X="68" Y="28"/>
         <UsageCount Value="24"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -722,11 +725,11 @@
       </Position21>
       <Position22>
         <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="58" Column="17" TopLine="63"/>
+        <Caret Line="126" TopLine="124"/>
       </Position22>
       <Position23>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="126" TopLine="124"/>
+        <Filename Value="Test9.pas"/>
+        <Caret Line="59" Column="10" TopLine="41"/>
       </Position23>
     </JumpHistory>
   </ProjectSession>
